--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lamb</title>
+    <title>admin-api</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <div id="turnon">
-      <a href="#turnon" class="lamp"></a>
-      <a href="#turnoff" class="turnoff"></a>
-      <div class="string"></div>
-      <div class="bulb"></div>
-      <div class="light"></div>
-    </div>
+    
   </body>
-  <script src="./index.js"></script>
 </html>
